--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     >
       <div>
         <h2 class="text-5xl font-extrabold mb-4" id="hero-title">
-          Hi, I'm Simranjit
+          Hi, I'm Simranjit Singh
         </h2>
         <p class="text-xl" id="hero-subtitle">A Developer & Tech Enthusiast</p>
       </div>
