--- a/index.html
+++ b/index.html
@@ -3,98 +3,97 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Simranjit's Portfolio</title>
+    <title>Simranjit Singh | Portfolio</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollToPlugin.min.js"></script>
+    <style>
+      body {
+        background: linear-gradient(135deg, #1f2937 0%, #0f172a 100%);
+      }
+      .blob {
+        position: absolute;
+        width: 600px;
+        height: 600px;
+        background: rgba(59, 130, 246, 0.3);
+        border-radius: 50%;
+        filter: blur(120px);
+        animation: blob 20s infinite;
+      }
+      @keyframes blob {
+        0%,
+        100% {
+          transform: translate(0, 0);
+        }
+        33% {
+          transform: translate(-100px, 60px);
+        }
+        66% {
+          transform: translate(80px, -40px);
+        }
+      }
+    </style>
   </head>
-  <body class="bg-gray-900 text-white font-sans">
-    <!-- Navbar -->
-    <nav class="fixed top-0 left-0 w-full p-4 bg-gray-800 shadow z-50">
-      <div class="container mx-auto flex justify-between items-center">
-        <h1 class="text-xl font-bold">Simranjit Singh</h1>
-        <div class="space-x-4">
-          <a href="#about" class="hover:underline">About</a>
-          <a href="#projects" class="hover:underline">Projects</a>
-          <a href="#contact" class="hover:underline">Contact</a>
-        </div>
-      </div>
-    </nav>
-
+  <body class="relative text-white font-sans overflow-x-hidden">
     <!-- Hero Section -->
     <section
-      class="h-screen flex items-center justify-center text-center px-4"
       id="hero"
+      class="relative min-h-screen flex items-center justify-center text-center px-6"
     >
-      <div>
-        <h2 class="text-5xl font-extrabold mb-4" id="hero-title">
+      <!-- Background blobs -->
+      <div class="blob top-[-200px] left-[-200px] z-0"></div>
+      <div class="blob top-[300px] right-[-150px] z-0"></div>
+
+      <div class="relative z-10">
+        <h1 class="text-5xl md:text-6xl font-extrabold mb-4" id="hero-title">
           Hi, I'm Simranjit Singh
+        </h1>
+        <h2 class="text-2xl md:text-3xl font-semibold mb-6" id="hero-subtitle">
+          Full Stack Software Engineer | SAP UI5 & ABAP Developer
         </h2>
-        <p class="text-xl" id="hero-subtitle">A Developer & Tech Enthusiast</p>
-      </div>
-    </section>
-
-    <!-- About Section -->
-    <section id="about" class="py-20 bg-gray-800 px-6">
-      <div class="max-w-3xl mx-auto text-center">
-        <h2 class="text-3xl font-bold mb-4">About Me</h2>
-        <p class="text-lg leading-relaxed">
-          I'm passionate about building web applications and always exploring
-          new tech. Currently learning SAP UI5 and ABAP.
-        </p>
-      </div>
-    </section>
-
-    <!-- Projects Section -->
-    <section id="projects" class="py-20 px-6">
-      <div class="max-w-5xl mx-auto">
-        <h2 class="text-3xl font-bold mb-10 text-center">Projects</h2>
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
-          <div class="bg-gray-700 p-6 rounded-lg shadow-lg project-card">
-            <h3 class="text-xl font-semibold mb-2">TickMark (SaaS)</h3>
-            <p>Multi-Tenant KPI Dashboard using Next.js, MongoDB, Stripe.</p>
-          </div>
-          <div class="bg-gray-700 p-6 rounded-lg shadow-lg project-card">
-            <h3 class="text-xl font-semibold mb-2">LKC Admin Panel</h3>
-            <p>MERN stack admin portal for managing college data.</p>
-          </div>
-          <!-- Add more cards as needed -->
-        </div>
-      </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section id="contact" class="py-20 bg-gray-800 px-6">
-      <div class="max-w-xl mx-auto text-center">
-        <h2 class="text-3xl font-bold mb-4">Contact Me</h2>
-        <p class="mb-6">Reach out for collaboration or just say hi!</p>
-        <a
-          href="mailto:simranjitsingh58648@gmail.com"
-          class="bg-blue-500 hover:bg-blue-600 text-white px-6 py-2 rounded-full"
-          >Email Me</a
+        <p
+          class="max-w-xl mx-auto text-lg text-gray-300 mb-8"
+          id="hero-tagline"
         >
+          I build fast, scalable apps — from SAP enterprise tools to modern web
+          portals.
+        </p>
+        <button
+          onclick="scrollToProjects()"
+          class="bg-blue-600 hover:bg-blue-700 transition px-6 py-3 rounded-full text-lg font-medium"
+        >
+          View My Work ↓
+        </button>
       </div>
+    </section>
+
+    <!-- Placeholder for Projects Section -->
+    <section
+      id="projects"
+      class="min-h-screen bg-gray-900 px-6 py-20 text-center"
+    >
+      <h2 class="text-3xl font-bold mb-4">Projects</h2>
+      <p class="text-gray-400">(Your projects will go here...)</p>
     </section>
 
     <script>
-      // GSAP Animations
-      gsap.from("#hero-title", { duration: 1, y: -50, opacity: 0 });
+      gsap.from("#hero-title", { duration: 1.2, y: -50, opacity: 0 });
       gsap.from("#hero-subtitle", {
         duration: 1.2,
-        delay: 0.5,
-        y: 50,
+        delay: 0.4,
+        y: 40,
+        opacity: 0,
+      });
+      gsap.from("#hero-tagline", {
+        duration: 1.2,
+        delay: 0.8,
+        y: 20,
         opacity: 0,
       });
 
-      gsap.utils.toArray(".project-card").forEach((card, index) => {
-        gsap.from(card, {
-          scrollTrigger: card,
-          duration: 1,
-          opacity: 0,
-          y: 100,
-          delay: index * 0.2,
-          ease: "power3.out",
-        });
-      });
+      function scrollToProjects() {
+        gsap.to(window, { duration: 1, scrollTo: "#projects" });
+      }
     </script>
   </body>
 </html>
